--- a/miot-medical-iot/weasis-detect-miot.yaml
+++ b/miot-medical-iot/weasis-detect-miot.yaml
@@ -2,7 +2,7 @@ id: weasis-launcher-detect
 info:
   name: Weasis PACS Connector ViewerHub detect
   author: r3dcl1ff
-  severity: info
+  severity: medium
   description: |
     Detects Weasis launch services : classic weasis-pacs-connector (/weasis, /weasis-pacs-connector/weasis)
     and the ViewerHub successor (/display/weasis), non-invasive.
