--- a/miot-medical-iot/orthanc-miot.yaml
+++ b/miot-medical-iot/orthanc-miot.yaml
@@ -4,7 +4,7 @@ info:
   author: r3dcl1ff
   severity: info
   description: Non-invasive Orthanc detector that probes UI/REST and DICOMweb endpoints. Matches Orthanc-specific headers, titles, realms, and DICOMweb landings. Extracts version from /system when available; never requests studies or PHI.
-  tags: medical,iot,miot,pacs,dicom,orthanc,http,discovery,non-invasive
+  tags: medical,iot,miot,pacs,dicom,orthanc
   metadata:
     shodan-query: '"Orthanc" OR http.title:"Orthanc" OR "/dicom-web/"'
 
